# aoc24

./: .gitignore  Cargo.toml  README.md
aoc24/: Cargo.toml
aoc24/src/: day.rs  lib.rs
aoc24/src/day23/: mod.rs
day09/src/: part2.rs
src/: cli.rs  day.rs  main.rs
src/commands/: init.rs  mod.rs  run.rs  watch.rs
src/day25/: part2.rs
src/runner/: mod.rs
src/tui/: app.rs  ui.rs
