[package]
name = "aoc-dev"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
cargo_metadata = "0.18.1"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
dialoguer = "0.11.0"
notify = "7.0.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
serde = { version = "1.0.215", features = ["derive"] }
tempfile = "3.14.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
