[package]
name = "aocr"
description = "A simple task runner and support tool for Advent of Code challenges."
repository = "https://github.com/alexjbuck/aocr"
license = "MIT"
version = "0.2.2"
authors = ["Alex Buck <alexjbuck@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.93"
arboard = "3.4.1"
cargo_metadata = "0.18.1"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
dialoguer = "0.11.0"
notify = "7.0.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
serde = { version = "1.0.215", features = ["derive"] }
tempfile = "3.14.0"
thiserror = "2.0.3"
toml = "0.8.19"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
