[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[dependencies]
day01 = { version = "0.1.0", path = "../day01" }
day02 = { version = "0.1.0", path = "../day02" }
day03 = { version = "0.1.0", path = "../day03" }
day04 = { version = "0.1.0", path = "../day04" }
day05 = { version = "0.1.0", path = "../day05" }
day06 = { version = "0.1.0", path = "../day06" }
day07 = { version = "0.1.0", path = "../day07" }
day08 = { version = "0.1.0", path = "../day08" }
day09 = { version = "0.1.0", path = "../day09" }
day10 = { version = "0.1.0", path = "../day10" }
day11 = { version = "0.1.0", path = "../day11" }
day12 = { version = "0.1.0", path = "../day12" }
day13 = { version = "0.1.0", path = "../day13" }
day14 = { version = "0.1.0", path = "../day14" }
day15 = { version = "0.1.0", path = "../day15" }
day16 = { version = "0.1.0", path = "../day16" }
day17 = { version = "0.1.0", path = "../day17" }
day18 = { version = "0.1.0", path = "../day18" }
day19 = { version = "0.1.0", path = "../day19" }
day20 = { version = "0.1.0", path = "../day20" }
day21 = { version = "0.1.0", path = "../day21" }
day22 = { version = "0.1.0", path = "../day22" }
day23 = { version = "0.1.0", path = "../day23" }
day24 = { version = "0.1.0", path = "../day24" }
day25 = { version = "0.1.0", path = "../day25" }
